opam-version: "1.2"
version: "1.20"
maintainer: "jeremie@dimino.org"
authors: ["Jérémie Dimino"]
license: "BSD3"
homepage: "https://github.com/diml/utop"
bug-reports: "https://github.com/diml/utop/issues"
dev-repo: "git://github.com/diml/utop.git"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "base-unix"
  "base-threads"
  "ocamlfind"    {>= "1.4.0"}
  "lambda-term"  {>= "1.2"}
  "lwt"
  "react"        {>= "1.0.0"}
  "cppo"         {build & >= "1.1.2"}
  "findlib_top"
  "jbuilder"     {build & >= "1.0+beta7"}
]
depopts: [
  "ppx_tools"
]
available: [ ocaml-version >= "4.02.3" ]
