opam-version: "1.2"
maintainer: "jeremie@dimino.org"
authors: ["Jérémie Dimino"]
license: "BSD3"
homepage: "https://github.com/diml/utop"
bug-reports: "https://github.com/diml/utop/issues"
dev-repo: "git://github.com/diml/utop.git"
build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "base-unix"
  "base-threads"
  "ocamlfind"    {>= "1.7.2"}
  "lambda-term"  {>= "1.2"}
  "lwt"
  "camomile"
  "react"        {>= "1.0.0"}
  "cppo"         {build & >= "1.1.2"}
  "jbuilder"     {build & >= "1.0+beta9"}
]
available: [ ocaml-version >= "4.02.3" & ocaml-version < "4.06.0"]
