(library
  (name uTop)
  (public_name utop)
  (wrapped false)
  (flags :standard -safe-string)
  (modes byte)
  (libraries compiler-libs.toplevel findlib.top lambda-term threads
    (select ocp_index_hook.ml from
      (ocp-index.lib -> config/ocp_index_on.ml)
      (!ocp-index.lib -> config/ocp_index_off.ml)))
  (preprocess
    (action
      (run %{bin:cppo} -V OCAML:%{ocaml_version} %{input-file}))))

(ocamllex uTop_lexer)
